[gd_scene load_steps=12 format=3 uid="uid://dsa5mmp1c38uu"]

[ext_resource type="Script" uid="uid://bwctrsvnnfhqk" path="res://atores/enemies/scripts/archer.gd" id="1_3dmky"]
[ext_resource type="Texture2D" uid="uid://b4wd2c1ilso4w" path="res://atores/enemies/assets/archer/spritesheet.png" id="2_wo8kq"]
[ext_resource type="PackedScene" uid="uid://c8sq7lewhrilo" path="res://atores/enemies/scenes/hitbox.tscn" id="3_s50rd"]

[sub_resource type="Animation" id="Animation_2spqa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wo8kq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_3dmky"]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wo8kq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0999201, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_h3h0d"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wo8kq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0999201, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_rr3d7"]
resource_name = "shoot"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wo8kq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0999201, 0.19984, 0.295597, 0.402456, 0.496825, 0.603684),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_5vrms"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wo8kq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0999201, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xb42e"]
_data = {
&"RESET": SubResource("Animation_2spqa"),
&"die": SubResource("Animation_3dmky"),
&"idle": SubResource("Animation_h3h0d"),
&"shoot": SubResource("Animation_rr3d7"),
&"walk": SubResource("Animation_5vrms")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l5kh1"]
radius = 12.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3dmky"]
radius = 8.0
height = 34.0

[node name="archer" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3dmky")

[node name="body" type="Node2D" parent="."]

[node name="animation" type="AnimationPlayer" parent="body"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_xb42e")
}
autoplay = "idle"

[node name="sprite" type="Sprite2D" parent="body"]
texture = ExtResource("2_wo8kq")
hframes = 8
vframes = 8

[node name="shoot_point" type="Marker2D" parent="body"]
position = Vector2(20, -6)

[node name="floor_edge" type="RayCast2D" parent="body"]
position = Vector2(0, 14)
target_position = Vector2(25, 25)
collision_mask = 2

[node name="step_ahead" type="RayCast2D" parent="body"]
position = Vector2(0, 8)
target_position = Vector2(30, 0)
collision_mask = 2

[node name="jump_clear" type="RayCast2D" parent="body"]
position = Vector2(0, -17)
target_position = Vector2(30, 0)
collision_mask = 2

[node name="hitbox" parent="." instance=ExtResource("3_s50rd")]
collision_layer = 64
collision_mask = 8

[node name="hit_collision" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_l5kh1")
debug_color = Color(0.993275, 0, 0.240019, 0.42)

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3dmky")

[connection signal="animation_finished" from="body/animation" to="." method="_on_animation_animation_finished"]
